Fix spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,10 @@
     margin-bottom: 4rem;
 }
 
+.bottom-space-sm {
+    margin-bottom: 2rem;
+}
+
 .points {
     font-weight: bold;
 }
